<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tw.ironthomas.smartiot.MainActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical" >


    <RadioButton
        android:id="@+id/hikvision_nvr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hikvision_nvr" />


        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:id="@+id/edit_server_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="@string/server_ip" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>		


        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:id="@+id/txt_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="@string/account" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>



        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="@string/password" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            />

        <SeekBar
            android:id="@+id/seekBar_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:max="31"
            android:progress="0"/>

    </LinearLayout>


        <RadioButton
            android:id="@+id/other_nvr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_nvr" />

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:id="@+id/edit_rtsp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="@string/other_source" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>


    </RadioGroup>


        <Button
            android:id="@+id/btn_play"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:textSize="30sp" />

        <SurfaceView
            android:id="@+id/surface_video"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>


